syntax = "proto3";

package site;

import "core/core.proto";

option java_package = "com.windchat.proto.server";
option java_outer_classname = "ImCtsMessageProto";

// options for php
// option php_namespace = "Akaxin\\Proto\\Site";
// option php_metadata_namespace = "Akaxin\\Proto\\";


/**
 * 接口名<action_name>：
 * 		im.cts.message
 *
 * 功能描述：
 * 		用户发送个人/群组消息至服务器
 *
 */
service ImCtsMessageService {
    rpc message (ImCtsMessageRequest) returns (core.NoneResponse);
}

message ImCtsMessageRequest {
	core.MsgType type = 1;							//消息类型

    core.MsgText text = 2;							//二人文本消息
    core.MsgSecretText secretText = 3;				//二人加密文本消息

    core.GroupText groupText = 4;					//群文本消息
    core.GroupSecretText groupSecretText = 5;		//群加密消息

	core.MsgImage image = 6;							//二人图片消息
	core.MsgSecretImage secretImage = 7;				//二人加密图片消息

	core.GroupImage groupImage = 8;					//群图片消息
	core.GroupSecretImage groupSecretImage = 9;		//群图片加密消息

	core.MsgVoice voice = 10;						//二人语音
	core.MsgSecretVoice secretVoice = 11;			//二人加密语音

	core.GroupVoice groupVoice = 12;					//群语音
	core.GroupSecretVoice groupSecretVoice = 13;		//群加密语音

	//v0.4.3 版本未使用
	core.U2Map u2Map = 14;							//普通地图消息
	core.U2SecretMap u2SecretMap = 15;				//加密地图消息
	core.GroupMap groupMap = 16;						//群地图
	core.GroupSecretMap groupSecretMap= 17;			//群加密地图

	//通知消息
	core.U2MsgNotice u2MsgNotice= 18;				//二人消息通知
	core.GroupMsgNotice groupMsgNotice = 19;			//群消息通知

	//召回消息
	core.U2Recall u2Recall = 20;						//二人召回消息
	core.GroupRecall groupRecall = 21;				//群组召回消息

	//web消息
	core.U2Web u2Web = 22;							//二人Web消息
	core.GroupWeb groupWeb = 23;						//群组web消息

	//web通知消息
	core.U2WebNotice u2WebNotice = 24;				//二人web通知消息
	core.GroupWebNotice groupWebNotice = 25;			//群组web通知消息
}
