syntax = "proto3";

package site;

import "core/core.proto";

option java_package = "com.windchat.proto.server";
option java_outer_classname = "ImSyncMessageProto";

// options for php
// option php_namespace = "Akaxin\\Proto\\Site";
// option php_metadata_namespace = "Akaxin\\Proto\\";


/**
 * 接口名<action_name>：
 * 		im.sync.message
 *
 * 功能描述：
 * 		客户端同步个人消息(二人消息，群消息等)
 *
 */
service ImSyncMessageService {
    rpc message(ImSyncMessageRequest) returns(core.NoneResponse);
}

message ImSyncMessageRequest{
	int64 u2_pointer = 1;					//二人消息游标
    map<string, int64> groups_pointer = 2;	//群组消息游标
}
