syntax = "proto3";

package site;

import "core/core.proto";

option java_package = "com.windchat.proto.server";
option java_outer_classname = "ImSyncMsgStatusProto";

// options for php
option php_namespace = "Akaxin\\Proto\\Site";
// option php_metadata_namespace = "Akaxin\\Proto\\";

/**
 * 接口名<action_name>：
 * 		im.sync.msgStatus
 *
 * 功能描述：
 * 		客户端同步消息状态
 *
 */
service ImSyncMsgStatusService {
    rpc msgStatus (ImSyncMsgStatusRequest) returns (core.NoneResponse);
}

message ImSyncMsgStatusRequest {
    repeated string u2_msg_id = 1; //客户端需要同步状态的U2消息id
    repeated string group_msg_id = 2; //客户端需要同步状态的Group消息id
}
