syntax = "proto3";

package platform;

option java_package = "com.windchat.proto.platform";
option java_outer_classname = "ApiPhoneVerifyCodeProto";

/**
 * 接口名<action_name>：
 * 		api.phone.verifyCode
 *
 * 功能描述：
 * 		手机号，获取手机验证码
 *
 * 支持的错误ID：
 * 		success							//发送手机验证码
 *  		error.alert						//发送手机验证码失败
 */
service ApiPhoneVerifyCodeService {
    rpc verifyCode (ApiPhoneVerifyCodeRequest) returns (ApiPhoneVerifyCodeResponse);
}

message ApiPhoneVerifyCodeRequest {
	string phone_id = 1; //需要发送验证码的手机号
	int32 vc_type = 2; //手机验证码类型 phone.proto中VCType
	string country_code = 3; //+86
	string site_address = 4;//站点地址
}

message ApiPhoneVerifyCodeResponse {
	int32 expire_time = 1; //手机验证码过期时间
}
