syntax = "proto3";

package site;

import "core/core.proto";

option java_package = "com.windchat.proto.server";
option java_outer_classname = "ImSyncFinishProto";

// options for php
option php_namespace = "Akaxin\\Proto\\Site";
// option php_metadata_namespace = "Akaxin\\Proto\\";

/**
 * 接口名<action_name>：
 * 		im.sync.finish
 *
 * 功能描述：
 * 		客户端同步消息完成操作。
 *
 */
service ImSyncFinishService {
    rpc finish(ImSyncFinishRequest) returns(core.NoneResponse);
}

message ImSyncFinishRequest {
    int64 u2_pointer = 1;					//二人消息游标
    map<string, int64> groups_pointer = 2;	//群组消息游标

}
